--- a/Book Store/Properties/AddAuthorWindowStrings.resx
+++ b/Book Store/Properties/AddAuthorWindowStrings.resx
@@ -117,34 +117,13 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="ButtonConnect" xml:space="preserve">
-    <value>Connect</value>
+  <data name="MsgAddedAuthor" xml:space="preserve">
+    <value>Author added!</value>
   </data>
-  <data name="LabelServerLogin" xml:space="preserve">
-    <value>Login:</value>
-  </data>
-  <data name="LabelServerName" xml:space="preserve">
-    <value>Server:</value>
-  </data>
-  <data name="LabelServerPassword" xml:space="preserve">
-    <value>Password:</value>
-  </data>
-  <data name="MsgConnectedDb" xml:space="preserve">
-    <value>Succeeded in connecting to the database!</value>
-  </data>
-  <data name="MsgNoConnectedDb" xml:space="preserve">
-    <value>Failed to connect to the database!</value>
-  </data>
-  <data name="ServerDatabaseNameDefault" xml:space="preserve">
-    <value>BookStore</value>
-  </data>
-  <data name="ServerLoginDafault" xml:space="preserve">
-    <value>bookadmin</value>
-  </data>
-  <data name="ServerNameDafault" xml:space="preserve">
-    <value>(localdb)\MSSQLLocalDB</value>
+  <data name="MsgEmptyFirstName" xml:space="preserve">
+    <value>First name is empty!</value>
   </data>
   <data name="WindowTitle" xml:space="preserve">
-    <value>Connection</value>
+    <value>Add author</value>
   </data>
 </root>
